<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/soft_pink"
    tools:context=".Login">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/inong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:paddingTop="35dp"
        android:paddingBottom="25dp"
        android:fontFamily="@font/poppins_extrabold"
        android:textStyle="bold"
        android:letterSpacing="0.03"/>

    <EditText
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:background="@drawable/forget"
        android:hint="@string/email"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="30dp"
        android:paddingLeft="25dp"/>

    <EditText
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:background="@drawable/forget"
        android:hint="@string/password"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="20dp"
        android:paddingLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpass"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:id="@+id/loginBtn"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textSize="14dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/openRegBtn"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/donthaveaccount"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:layout_marginTop="25dp"/>

</LinearLayout>