<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/soft_pink" >

    <ImageView
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:src="@drawable/inong"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createaccount"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:textSize="28dp"
        android:textStyle="bold"
        android:letterSpacing="0.03"
        android:padding="20dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:inputType="text"
        android:id="@+id/username"
        android:hint="Username"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="20dp"
        android:paddingLeft="25dp" />

    <EditText
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="20dp"
        android:paddingLeft="25dp" />

    <EditText
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="20dp"
        android:paddingLeft="25dp"/>

    <EditText
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:inputType="textPassword"
        android:id="@+id/confPassword"
        android:hint="@string/confirmpass"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="20dp"
        android:paddingLeft="25dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:id="@+id/regBtn"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textSize="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/openLoginBtn"
        android:text="@string/already"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12dp"
        android:layout_marginTop="35dp"/>

</LinearLayout>